# VecBase

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  USAGE.md  docker-compose.yml
SetUp/: setup.sh
SetUp/Others/: install_docker.sh
database/Advanced/: README.md
database/Common/: README.md
database/OTHERS/: README.md
doc/: INDEX.md  architecture.md  roadmap.md
example/: basic.rs  batch.rs
tools/: README.md  npy_import.rs
tools/vecbase-cli/src/: main.rs
vcore/: Cargo.toml  doc-core.md
vcore/benches/: search_bench.rs
vcore/src/: embedding.rs  lib.rs  main.rs  processing.rs
vcore/src/algorithm/: algorithm.md
vcore/src/plug-ins/: env.example  plugins.md
vcore/src/plug-ins/example_plugin/src/: lib.rs
